# application

./: .gitignore  .gitmodules  README.md  download_models.ps1  download_models.sh  package.json  py-install.js
.github/workflows/: installer-release.yml
backend/: .gitignore  Cargo.toml  tauri.conf.json
backend/icons/: icon.icns
backend/src/: commands.rs  common.rs  error.rs  main.rs  python.rs
backend/src/utils/: cacheutils.rs  mod.rs  searchutils.rs  volumeutils.rs
frontend/: components.json  index.html  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: splashscreen.html
frontend/src/app/: App.tsx  global-error.tsx  layout.tsx  main.tsx  not-found.tsx  page.tsx
frontend/src/app/pages/: Home.tsx  SearchByImage.tsx  SearchByMetadata.tsx  SearchByText.tsx
frontend/src/app/sbi/: page.tsx
frontend/src/app/sbt/: page.tsx
frontend/src/app/testpage/: page.tsx
frontend/src/components/: about-file-sense.tsx  copy-action.tsx  error-boundry.tsx  file-folder-component.tsx  global-error.tsx  image-component.tsx  images-panel.tsx  index-combobox.tsx  index-component.tsx  index-management-sheet.tsx  indexes-panel.tsx  loading.tsx  menu.tsx  navbar.tsx  not-found.tsx  results-panel.tsx  sbt-menu.tsx  search-control-menu-metadata-search.tsx  search-control-menu.tsx  settings-menu.tsx  status-led.tsx  theme-toggle.tsx  tree-control.tsx
frontend/src/functions/: apiFunctions.ts  commonFunctions.ts  httpFunctions.ts  tauriFunctions.ts
frontend/src/lib/: atoms.ts  types.ts
frontend/src/styles/: globals.css  index.css
(+14 files in other folders)
